[package]

name = "twig"
version = "0.0.3"
description = "Twig templating engine for Rust; work in progress."
documentation = "http://nercury.github.io/twig-rs/twig/index.html"
repository = "https://github.com/Nercury/twig-rs"
authors = [
    "Rust Twig Team",
    "Nerijus Arlauskas <nercury@gmail.com>"
]
license = "BSD-3-Clause"

[dev-dependencies]
env_logger = "0.3.1"
serde = "*"
serde_json = "0.6.0"
difference = "0.4"
term = "0.2.12"

[dependencies]
regex = "0.1.41"
uuid = "0.1"
log = "0.3.2"
little = "0.2.1"
