[package]

name = "twig"
version = "0.1.0"
description = "Twig templating engine for Rust; work in progress."
documentation = "http://nercury.github.io/twig-rs/twig/index.html"
repository = "https://github.com/Nercury/twig-rs"
authors = [
    "Rust Twig Team",
    "Nerijus Arlauskas <nercury@gmail.com>"
]
license = "BSD-3-Clause"

[dev-dependencies]
env_logger = "0.4"
serde = "1.0"
serde_json = "1.0"
difference = "0.4"
term = "0.2"

[dependencies]
regex = "0.1.80"
uuid = "0.1"
log = "0.3"
little = "0.3"
sha1 = "0.1"
byteorder = "^0.4"
